# PluginSystem

./: CMakeLists.txt  api.cxx  api.hpp  dllkeeper.cxx  dllkeeper.hpp  main.cxx  plugin.cxx  plugin.hpp
api/: CMakeLists.txt  api.cxx  api.hpp  dllkeeper.cxx  dllkeeper.hpp  pluginbase.cxx  pluginbase.hpp
application/: CMakeLists.txt  main.cxx  server.cxx  server.hpp
myplugin/: CMakeLists.txt  myplugin.cxx  myplugin.hpp
